--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
     </style>
 </head>
 
-<h1>Assignment 1</h1>
+<h1>Heimadæmi 2</h1>
 <ul>
-    <li><a href="./H2/d1/d1-a.html">H1-d1-a</a></li>
-    <li><a href="./H2/d1/d1-b.html">H1-d1-b</a></li>
-    <li><a href="./H2/d2/circlefan.html">Part 3</a></li>
-    <!-- Add more parts as needed -->
+    <li><a href="./H2/d1/d1-a.html">Dæmi 1-a</a></li>
+    <li><a href="./H2/d1/d1-b.html">Dæmi 1-b</a></li>
+    <li><a href="./H2/d2/circlefan.html">Dæmi 2</a></li>
+    <li><a href="./H2/d3/d3.html">Dæmi 3</a></li>
+    <li><a href="./H2/d4/d4.html">Dæmi 4</a></li>
+    <li><a href="./H2/d5/sierpinskiCarpet.html">Dæmi 5</a></li>
 </ul>
 </body>
 </html>
