--- a/H2/index.html
+++ b/H2/index.html
@@ -35,7 +35,12 @@
 
 <h1>Heimadæmi 2</h1>
 <ul>
-    <li><a href="./H2/index.html">Heimadæmi</a></li>
+    <li><a href="./d1/d1-a.html">Dæmi 1-a</a></li>
+    <li><a href="./d1/d1-b.html">Dæmi 1-b</a></li>
+    <li><a href="./d2/circlefan.html">Dæmi 2</a></li>
+    <li><a href="./d3/d3.html">Dæmi 3</a></li>
+    <li><a href="./d4/d4.html">Dæmi 4</a></li>
+    <li><a href="./d5/sierpinskiCarpet.html">Dæmi 5</a></li>
 </ul>
 </body>
 </html>
