--- a/H2/d4/d4.html
+++ b/H2/d4/d4.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>click-circles</title>
-    <!-- <style>
+    <style>
       body {
         height: 100vh;
         margin: 0 auto;
@@ -15,7 +15,7 @@
         height: 90vh;
         margin: 0 auto;
       }
-    </style> -->
+    </style>
 
     <script id="vertex-shader" type="x-shader/x-vertex">
 
