--- a/H2/index.html
+++ b/H2/index.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 1</title>
+    <title>Tölvugrafík-105M</title>
     <style>
         body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
             font-family: Arial, sans-serif;
             line-height: 1.6;
-            margin: 0;
-            padding: 20px;
-            max-width: 800px;
             margin: 0 auto;
+            padding: 20px;
+            height: 100vh;
+
         }
         h1 {
             color: #333;
@@ -19,9 +23,10 @@
         ul {
             list-style-type: none;
             padding: 0;
+            margin: 0 auto;
         }
         li {
-            margin-bottom: 10px;
+            margin-bottom: 1rem;
         }
         a {
             color: #0066cc;
