--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     </style>
 </head>
 
-<h1>Heimadæmi 2</h1>
+<h1>Verkefni í Tölvugrafík - TÖL105M - krg47@hi.is</h1>
 <ul>
-    <li><a href="./H2/index.html">Heimadæmi</a></li>
+    <li><a href="./H2/index.html">Heimadæmi 2</a></li>
 </ul>
 </body>
 </html>
