--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Assignment 1</title>
     <style>
         body {
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
@@ -24,6 +29,8 @@
             margin-bottom: 10px;
         }
         a {
+            font-weight: bold;
+            font-size: 2rem;
             color: #0066cc;
             text-decoration: none;
         }
