--- a/H2/d1/d1-b.html
+++ b/H2/d1/d1-b.html
@@ -42,9 +42,9 @@
       }
     </script>
 
-    <script type="text/javascript" src="../Common/webgl-utils.js"></script>
-    <script type="text/javascript" src="../Common/initShaders.js"></script>
-    <script type="text/javascript" src="../Common/MV.js"></script>
+    <script type="text/javascript" src="../../lib/webgl-utils.js"></script>
+    <script type="text/javascript" src="../../lib/initShaders.js"></script>
+    <script type="text/javascript" src="../../lib/MV.js"></script>
     <script type="text/javascript" src="./b.js"></script>
   </head>
 
