--- a/H2/d2/circlefan.html
+++ b/H2/d2/circlefan.html
@@ -43,9 +43,9 @@
     }
   </script>
 
-  <script type="text/javascript" src="../Common/webgl-utils.js"></script>
-  <script type="text/javascript" src="../Common/initShaders.js"></script>
-  <script type="text/javascript" src="../Common/MV.js"></script>
+  <script type="text/javascript" src="../../lib/webgl-utils.js"></script>
+  <script type="text/javascript" src="../../lib/initShaders.js"></script>
+  <script type="text/javascript" src="../../lib/MV.js"></script>
   <script type="text/javascript" src="circlefan.js"></script>
 
   <body>
