--- a/H2/d3/d3.html
+++ b/H2/d3/d3.html
@@ -37,8 +37,8 @@
       }
     </script>
 
-    <script type="text/javascript" src="../Common/webgl-utils.js"></script>
-    <script type="text/javascript" src="../Common/initShaders.js"></script>
+    <script type="text/javascript" src="../../lib/webgl-utils.js"></script>
+    <script type="text/javascript" src="../../lib/initShaders.js"></script>
     <script type="text/javascript" src="./d3.js"></script>
   </head>
 
