--- a/H2/d4/d4.html
+++ b/H2/d4/d4.html
@@ -41,9 +41,9 @@
       }
     </script>
 
-    <script type="text/javascript" src="../Common/webgl-utils.js"></script>
-    <script type="text/javascript" src="../Common/initShaders.js"></script>
-    <script type="text/javascript" src="../Common/MV.js"></script>
+    <script type="text/javascript" src="../../lib/webgl-utils.js"></script>
+    <script type="text/javascript" src="../../lib/initShaders.js"></script>
+    <script type="text/javascript" src="../../lib/MV.js"></script>
     <script type="text/javascript" src="./d4.js"></script>
   </head>
 
