--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <h1>Verkefni í Tölvugrafík - TÖL105M - krg47@hi.is</h1>
 <ul>
     <li><a href="./H2/index.html">Heimadæmi 2</a></li>
+    <li><a href="./V1/index.html">V1 - shoot stuff</a></li>
 </ul>
 </body>
 </html>
