--- a/V1/index.html
+++ b/V1/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    <title>DuckHunt</title>
+    <title>Shoot Stuff</title>
 
     <style>
       body {
