færa index fyrir gh pages. Breytti score til að vinna í 5 (skv verkefnalýsingunni)

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 <h1>Verkefni í Tölvugrafík - TÖL105M - krg47@hi.is</h1>
 <ul>
-    <li><a href="./H2/index.html">Heimadæmi 2</a></li>
-    <li><a href="./V1/index.html">V1 - shoot stuff</a></li>
+    <li><a href="./src/H2/index.html">Heimadæmi 2</a></li>
+    <li><a href="./src/V1/index.html">V1 - shoot stuff</a></li>
 </ul>
 </body>
 </html>
