--- a/src/H3/index.html
+++ b/src/H3/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>H2</title>
+    <title>H3</title>
     <style>
         body {
             display: flex;
@@ -27,6 +27,7 @@
         }
         li {
             margin-bottom: 1rem;
+            text-align: center;
         }
         a {
             color: #0066cc;
@@ -38,14 +39,10 @@
     </style>
 </head>
 
-<h1>Heimadæmi 2</h1>
+<h1>Heimadæmi 3</h1>
 <ul>
-    <li><a href="./d1/d1-a.html">Dæmi 1-a</a></li>
-    <li><a href="./d1/d1-b.html">Dæmi 1-b</a></li>
-    <li><a href="./d2/circlefan.html">Dæmi 2</a></li>
-    <li><a href="./d3/d3.html">Dæmi 3</a></li>
-    <li><a href="./d4/d4.html">Dæmi 4</a></li>
-    <li><a href="./d5/sierpinskiCarpet.html">Dæmi 5</a></li>
+    <li><a href="./d1/d1.html">Hreyfanlegur Sierpinski</a></li>
+    <li><a href="./d2/d2.html">Sínus Bolti</a></li>
 </ul>
 </body>
 </html>
