--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <ul>
     <li><a href="./src/H2/index.html">Heimadæmi 2</a></li>
     <li><a href="./src/V1/index.html">V1 - shoot stuff</a></li>
+    <li><a href="./src/H3/index.html">Heimadæmi 3</a></li>
 </ul>
 </body>
 </html>
