--- a/src/V1/index.html
+++ b/src/V1/index.html
@@ -53,7 +53,7 @@
       precision mediump float;
 
       out vec4 fragColor;
-      
+
       uniform int uColorsIndex;
       uniform vec4 uColors[3];  
 
@@ -63,9 +63,8 @@
       }
   </script>
 
-    <script type="text/javascript" src="../lib/webgl-utils.js"></script>
-    <script type="module" src="../lib/initShaders.js"></script>
-    <script type="text/javascript" src="../lib/MV.js"></script>
+    <script type="text/javascript" src="./lib/webgl-utils.js"></script>
+    <script type="text/javascript" src="./lib/MV.js"></script>
     <script type="module" src="./game.js"></script>
   </head>
 
