billy og klukka

--- a/src/H4/index.html
+++ b/src/H4/index.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 1</title>
+    <title>H4</title>
     <style>
         body {
-
             display: flex;
             flex-direction: column;
             align-items: center;
 
             font-family: Arial, sans-serif;
             line-height: 1.6;
-            margin: 0;
-            padding: 20px;
-            max-width: 800px;
             margin: 0 auto;
+            padding: 20px;
+            height: 100vh;
+
         }
         h1 {
             color: #333;
@@ -24,13 +23,13 @@
         ul {
             list-style-type: none;
             padding: 0;
+            margin: 0 auto;
         }
         li {
-            margin-bottom: 10px;
+            margin-bottom: 1rem;
+            text-align: center;
         }
         a {
-            font-weight: bold;
-            font-size: 2rem;
             color: #0066cc;
             text-decoration: none;
         }
@@ -40,12 +39,10 @@
     </style>
 </head>
 
-<h1>Verkefni í Tölvugrafík - TÖL105M - krg47@hi.is</h1>
+<h1>Heimadæmi 4</h1>
 <ul>
-    <li><a href="./src/H2/index.html">Heimadæmi 2</a></li>
-    <li><a href="./src/V1/index.html">V1 - shoot stuff</a></li>
-    <li><a href="./src/H3/index.html">Heimadæmi 3</a></li>
-    <li><a href="./src/H4/index.html">Heimadæmi 4</a></li>
+    <li><a href="./billy/billy.html">BILLY</a></li>
+    <li><a href="./klukka/klukka.html">Continue Time</a></li>
 </ul>
 </body>
 </html>
