--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <li><a href="./src/V1/index.html">V1 - shoot stuff</a></li>
     <li><a href="./src/H3/index.html">Heimadæmi 3</a></li>
     <li><a href="./src/H4/index.html">Heimadæmi 4</a></li>
+    <li><a href="./src/V2/index.html">V2 - Game of Life 3D</a></li>
 </ul>
 </body>
 </html>
