--- a/src/V2/index.html
+++ b/src/V2/index.html
@@ -17,15 +17,22 @@
       }
       canvas {
         width: 99vh;
-        height: 99vh;
+        height: 85vh;
         margin: 0 auto;
       }
 
+      input[type='number'] {
+        width: 30px;
+      }
+
       .controls {
-        margin-top: 10px;
+        margin: 0 auto;
+        height: 15vh;
+        column-gap: 1rem;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
+        justify-content: center;
       }
       .control-group {
         margin: 5px 0;
@@ -75,26 +82,6 @@
   </head>
 
   <body>
-    <input
-      type="range"
-      id="scaleSlider"
-      min="0.1"
-      max="2"
-      step="0.1"
-      value="1"
-    />
-
-    <select id="patternSelect">
-      <option value="random">Random</option>
-      <option value="cross">Cross</option>
-      <option value="line">Line</option>
-      <option value="dotted-line">Dotted-Line</option>
-      <option value="block">Block</option>
-      <option value="glider">Glider</option>
-      <option value="spaceship">Spaceship</option>
-      <option value="pulsar">Pulsar</option>
-    </select>
-
     <canvas id="gl-canvas" width="512" height="512">
       Oops ... your browser doesn't support the HTML5 canvas element
     </canvas>
@@ -102,20 +89,37 @@
     <div class="controls">
       <div class="control-group">
         <label for="birth">Birth Rule:</label>
-        <input
-          type="number"
-          min="0"
-          max="20"
-          default="6"
-          id="birth"
-          value="6"
-        />
+        <input type="number" min="0" id="birth-1" />
+        <input type="number" min="0" id="birth-2" />
       </div>
       <div class="control-group">
         <label for="survival">Survival Rule:</label>
-        <input type="number" id="survival-1" value="5" min="0" max="20" />
-        <input type="number" id="survival-2" value="6" min="0" max="20" />
-        <input type="number" id="survival-3" value="7" min="0" max="20" />
+        <input type="number" id="survival-1" min="0" />
+        <input type="number" id="survival-2" min="0" />
+        <input type="number" id="survival-3" min="0" />
+      </div>
+
+      <div class="control-group">
+        <label for="fps">FPS:</label>
+        <input type="number" id="fps" min="1" max="60" step="1"" />
+        <label for="grid-scale">grid:</label>
+        <input type="number" id="grid-scale" min="0.5" step="0.5" />
+        <!-- <label for="cell-scale">cells:</label>
+        <input type="number" id="cell-scale" min="0.0001" step="0.1" /> -->
+      </div>
+
+      <div class="control-group">
+        <label for="patternSelect">Pattern:</label>
+        <select id="patternSelect">
+          <option value="random">Random</option>
+          <option value="cross">Cross</option>
+          <option value="line">Line</option>
+          <option value="dotted-line">Dotted-Line</option>
+          <option value="block">Block</option>
+          <option value="glider">Glider</option>
+          <option value="spaceship">Spaceship</option>
+          <option value="pulsar">Pulsar</option>
+        </select>
       </div>
     </div>
   </body>
