--- a/src/H5/index.html
+++ b/src/H5/index.html
@@ -41,7 +41,8 @@
 
 <h1>Heimadæmi 5</h1>
 <ul>
-    <li><a href="./d1-RunningMan/running-man.html">Running Man</a></li>
+    <li><a href="./RunningMan/running-man.html">Running Man</a></li>
+    <li><a href="./carPerspective/carPerspective.html">Car Perspectives</a></li>
 </ul>
 </body>
 </html>
