--- a/src/H5/RunningMan/running-man.html
+++ b/src/H5/RunningMan/running-man.html
@@ -130,9 +130,8 @@
       height: 7vh;
     }
 
-    #instructions p {
-      /* margin: 0; */
-    }
+    /* #instructions p {
+    } */
   </style>
 
   <body>
