--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <li><a href="./src/H4/index.html">Heimadæmi 4</a></li>
     <li><a href="./src/V2/index.html">V2 - Game of Life 3D</a></li>
     <li><a href="./src/H5/index.html">Heimadæmi 5</a></li>
+    <li><a href="./src/H6/index.html">Heimadæmi 6</a></li>
 
 </ul>
 </body>
