--- a/src/V2/index.html
+++ b/src/V2/index.html
@@ -146,6 +146,7 @@
       out vec4 vColor;
       out vec3 vNormal;
       out vec3 vLightDirection;
+      out vec3 vViewPos;
 
       void
       main()
@@ -162,6 +163,8 @@
         mat4 modelViewMatrix = uViewMatrix * modelMatrix;
       
         gl_Position = uProjection * modelViewMatrix * aPosition;
+
+        vViewPos = vec3(uViewMatrix * vec4(0.0, 0.0, 0.0, 1.0));
 
         // Calculate normal matrix
         mat3 normalMatrix = transpose(inverse(mat3(modelViewMatrix)));
@@ -180,24 +183,35 @@
       in vec4 vColor;
       in vec3 vNormal;
       in vec3 vLightDirection;
+      in vec3 vViewPos;
 
-
-      float uAmbientFactor = 0.2;
-      float uDiffuseStrength = 0.8;
       vec3 uLightColor = vec3(1.0, 1.0, 1.0);
 
       out vec4 fragColor;
 
       void main()
       {
+        // get the FragPos
+        vec3 FragPos = vec3(gl_FragCoord.x, gl_FragCoord.y, 0.0);
+
         vec3 normal = normalize(vNormal);
         vec3 lightDir = normalize(vLightDirection);
+        vec3 lightColor = normalize(vec3(1.0, 1.0, 1.0)); // could have separate amb, diff, spec colors
 
-        float diff = max(dot(normal, lightDir), 0.0); 
-        
-        vec3 ambient = uAmbientFactor * uLightColor;
-        vec3 diffuse = uDiffuseStrength * diff * uLightColor;
-        vec3 litColor = vColor.rgb * (ambient + diffuse);
+        float ambientStrength = 0.2;
+        vec3 ambient = ambientStrength * lightColor;
+
+        float diffuseStrength = max(dot(lightDir, normal), 0.0); 
+        vec3 diffuse = diffuseStrength * lightColor;
+
+
+        // specular
+        vec3 viewDir = normalize(vViewPos - FragPos);
+        vec3 reflectDir = normalize(reflect(-lightDir, normal));
+        float specularStrength = normalize(max(dot(viewDir, reflectDir), 0.0) * 32.0); // should be power of 32
+        vec3 specular = normalize(specularStrength * lightColor);
+
+        vec3 litColor = vColor.rgb * (ambient + diffuse); // + specular;
 
         fragColor = vec4(litColor, vColor.a);
 
