--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <li><a href="./src/V2/index.html">V2 - Game of Life 3D</a></li>
     <li><a href="./src/H5/index.html">Heimadæmi 5</a></li>
     <li><a href="./src/H6/index.html">Heimadæmi 6</a></li>
-    <li><a href="./src/V3/index.html">V3 - Frogger</a></li>
+    <li><a href="./src/V3-FROGGER-vite/index.html">V3 - Frogger</a></li>
 
 </ul>
 </body>
