--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <li><a href="./src/H5/index.html">Heimadæmi 5</a></li>
     <li><a href="./src/H6/index.html">Heimadæmi 6</a></li>
     <li><a href="./src/V3-FROGGER-vite/index.html">V3 - Frogger</a></li>
+    <li><a href="./src/threejs-playground/index.html">SpaceGuy - test</a></li>
 
 </ul>
 </body>
