Frogger virkandi 23rj0

--- a/src/V3-FROGGER-vite/src/index.html
+++ b/src/V3-FROGGER-vite/src/index.html
@@ -10,9 +10,9 @@
   <body>
     <div id="app">
       <div id="info">
-        <h1 id="score">Score: <span id="scoreUI">00</span></h1>
-        <h1 id="time">Time: <span id="timeUI">480</span></h1>
-        <h1 id="lives">Lives: <span id="livesUI">4</span></h1>
+        <h3 id="scoreUI"></h3>
+        <h3 id="timeUI"></h3>
+        <h3 id="livesUI"></h3>
       </div>
       <div class="btns">
         <button id="start">Start</button>
