--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <li><a href="./src/V1/index.html">V1 - shoot stuff</a></li>
     <li><a href="./src/H3/index.html">Heimadæmi 3</a></li>
     <li><a href="./src/H4/index.html">Heimadæmi 4</a></li>
-    <li><a href="./src/V2/index.html">V2 - Game of Life 3D</a></li>
+    <li><a href="./src/V2/index.html">V2 - Game of Life 3d</a></li>
     <li><a href="./src/H5/index.html">Heimadæmi 5</a></li>
     <li><a href="./src/H6/index.html">Heimadæmi 6</a></li>
-    <li><a href="./src/V3-FROGGER-vite/src/index.html">V3 - Frogger</a></li>
+    <li><a href="./src/v3-frogger-vite/dist/index.html">V3 - Frogger 3d</a></li>
     <li><a href="./threejs-sketches/spaceguy/index.html">SpaceGuy - test</a></li>
 
 </ul>
