home index frogger link: href='/HI-grafik-assignments/src/v3-frogger-vite/'

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <li><a href="./src/V2/index.html">V2 - Game of Life 3d</a></li>
     <li><a href="./src/H5/index.html">Heimadæmi 5</a></li>
     <li><a href="./src/H6/index.html">Heimadæmi 6</a></li>
-    <li><a href="./src/v3-frogger-vite/dist/index.html">V3 - Frogger 3d</a></li>
+    <li><a href="/HI-grafik-assignments/src/v3-frogger-vite/">V3 - Frogger 3d</a></li>
     <li><a href="./threejs-sketches/spaceguy/index.html">SpaceGuy - test</a></li>
 </ul>
 </body>
