--- a/src/V3-FROGGER-vite/index.html
+++ b/src/V3-FROGGER-vite/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="/src/css/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FROGGER</title>
   </head>
@@ -21,6 +21,6 @@
         <button id="switchCam">Switch Camera</button>
       </div>
     </div>
-    <script type="module" src="./main.ts"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
