--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <li><a href="./src/H5/index.html">Heimadæmi 5</a></li>
     <li><a href="./src/H6/index.html">Heimadæmi 6</a></li>
     <li><a href="https://kristinnroach.github.io/frogger/">V3 - Frogger</a></li>
+    <li><a href="./src/H6/shadowmap.html">Heimadæmi 7</a></li>
     <li><a href="./threejs-sketches/spaceguy/index.html">SpaceGuy - test</a></li>
 </ul>
 </body>
