--- a/index.html
+++ b/index.html
@@ -3,40 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 1</title>
+    <title>WebGL assignments</title>
+    <link rel="stylesheet" href="./src/shared.css">
     <style>
-        body {
-
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 20px;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        h1 {
-            color: #333;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            margin-bottom: 10px;
-        }
-        a {
-            font-weight: bold;
-            font-size: 2rem;
-            color: #0066cc;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
+        body { max-width: 800px; height: auto; }
+        li { margin-bottom: 10px; }
+        a { font-weight: bold; font-size: 2rem; }
     </style>
 </head>
 
