--- a/src/H2/index.html
+++ b/src/H2/index.html
@@ -4,38 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>H2</title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0 auto;
-            padding: 20px;
-            height: 100vh;
-
-        }
-        h1 {
-            color: #333;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0 auto;
-        }
-        li {
-            margin-bottom: 1rem;
-        }
-        a {
-            color: #0066cc;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="../shared.css">
 </head>
 
 <h1>Heimadæmi 2</h1>
