--- a/src/H6/index.html
+++ b/src/H6/index.html
@@ -4,44 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>H6</title>
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0 auto;
-            padding: 20px;
-            height: 100vh;
-
-        }
-        h1 {
-            color: #333;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0 auto;
-        }
-        li {
-            margin-bottom: 1rem;
-            text-align: center;
-        }
-        a {
-            color: #0066cc;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="../shared.css">
 </head>
 
-<h1>Heimadæmi 5</h1>
+<h1>Heimadæmi 6</h1>
 <ul>
-    <!-- <li><a href="./reverse-vert/reverse-vert.html">reverse-vert</a></li> -->
     <li><a href="./billy-phong/billy-phong.html">billy-phong</a></li>
     <li><a href="./trans-te/trans-te.html">trans-te</a></li>
 </ul>
