--- a/src/H2/index.html
+++ b/src/H2/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="../shared.css">
 </head>
 
+<div class="side-buttons">
+  <button id="theme-toggle"></button>
+  <a href="../../index.html" class="back-btn" aria-label="Back to main page">← Back</a>
+</div>
+
 <h1>Heimadæmi 2</h1>
-<ul>
+<ul class="list-centered">
     <li><a href="./d1/d1-a.html">Dæmi 1-a</a></li>
     <li><a href="./d1/d1-b.html">Dæmi 1-b</a></li>
     <li><a href="./d2/circlefan.html">Dæmi 2</a></li>
@@ -16,5 +21,8 @@
     <li><a href="./d4/d4.html">Dæmi 4</a></li>
     <li><a href="./d5/sierpinskiCarpet.html">Dæmi 5</a></li>
 </ul>
+
+<script src="../theme-toggle.js"></script>
+
 </body>
 </html>
