--- a/src/H5/index.html
+++ b/src/H5/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="../shared.css">
 </head>
 
+<button id="theme-toggle" style="position:absolute;top:16px;right:16px;padding:6px 12px;border:1px solid var(--color-border);background:var(--color-surface);color:var(--color-fg);border-radius:6px;cursor:pointer;font-weight:500;"></button>
+<script src="../theme-toggle.js"></script>
+
+<a href="../../index.html" class="back-btn" aria-label="Back to main page">← Back</a>
 <h1>Heimadæmi 5</h1>
-<ul>
+<ul class="list-centered">
     <li><a href="./RunningMan/running-man.html">Running Man</a></li>
     <li><a href="./carPerspective/carPerspective.html">Car Perspectives</a></li>
 </ul>
