--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
     <link rel="stylesheet" href="./src/shared.css">
     <style>
         body { max-width: 800px; height: auto; }
-        li { margin-bottom: 10px; }
         a { font-weight: bold; font-size: 2rem; }
     </style>
 </head>
 
-<h1>Verkefni í Tölvugrafík - TÖL105M - krg47@hi.is</h1>
-<ul>
-    <li><a href="./src/H2/index.html">Heimadæmi 2</a></li>
-    <li><a href="./src/V1/index.html">V1 - shoot stuff</a></li>
-    <li><a href="./src/H3/index.html">Heimadæmi 3</a></li>
-    <li><a href="./src/H4/index.html">Heimadæmi 4</a></li>
-    <li><a href="./src/V2/index.html">V2 - Game of Life</a></li>
-    <li><a href="./src/H5/index.html">Heimadæmi 5</a></li>
-    <li><a href="./src/H6/index.html">Heimadæmi 6</a></li>
-    <li><a href="https://kristinnroach.github.io/frogger/">V3 - Frogger</a></li>
-    <li><a href="./src/H7/shadowmap.html">Heimadæmi 7</a></li>
-    <li><a href="./threejs-sketches/spaceguy/index.html">SpaceGuy - test</a></li>
+<button id="theme-toggle" style="position:absolute;top:16px;right:16px;padding:6px 12px;border:1px solid var(--color-border);background:var(--color-surface);color:var(--color-fg);border-radius:6px;cursor:pointer;font-weight:500;">Theme</button>
+<h1 class="">Computer Graphics Assignments</h1>
+<ul class="list-centered">
+    <li class=""><a href="./src/H2/index.html">Heimadæmi 2</a></li>
+    <li class=""><a href="./src/V1/index.html">V1 - shoot stuff</a></li>
+    <li class=""><a href="./src/H3/index.html">Heimadæmi 3</a></li>
+    <li class=""><a href="./src/H4/index.html">Heimadæmi 4</a></li>
+    <li class=""><a href="./src/V2/index.html">V2 - Game of Life</a></li>
+    <li class=""><a href="./src/H5/index.html">Heimadæmi 5</a></li>
+    <li class=""><a href="./src/H6/index.html">Heimadæmi 6</a></li>
+    <li class=""><a href="https://kristinnroach.github.io/frogger/">V3 - Frogger</a></li>
+    <li class=""><a href="./src/H7/shadowmap.html">Heimadæmi 7</a></li>
+    <li class=""><a href="./threejs-sketches/spaceguy/index.html">SpaceGuy - test</a></li>
 </ul>
+<script src="./src/theme-toggle.js"></script>
 </body>
 </html>
