--- a/src/H2/d1/d1-b.html
+++ b/src/H2/d1/d1-b.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    <title>h1-d1</title>
 
+    <title>h1-d1</title>
+    <link rel="stylesheet" href="../../shared.css" />
     <style>
       body {
-        height: 100vh;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
@@ -18,6 +18,9 @@
         width: 90vh;
         height: 90vh;
         margin: 0 auto;
+        background: transparent;
+        z-index: 1;
+        position: relative;
       }
     </style>
 
@@ -46,9 +49,13 @@
     <script type="text/javascript" src="../lib/initShaders.js"></script>
     <script type="text/javascript" src="../lib/MV.js"></script>
     <script type="text/javascript" src="./b.js"></script>
+
+    <script src="../../theme-toggle.js"></script>
   </head>
 
   <body>
+    <a href="../index.html" class="back-btn" aria-label="Back to H2">← Back</a>
+    <button id="theme-toggle"></button>
     <canvas id="gl-canvas" width="512" height="512">
       Oops ... your browser doesn't support the HTML5 canvas element
     </canvas>
