--- a/src/H2/d3/d3.html
+++ b/src/H2/d3/d3.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>L-shape</title>
+    <link rel="stylesheet" href="../../shared.css" />
     <style>
       body {
-        height: 100vh;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
@@ -14,6 +14,9 @@
         width: 90vh;
         height: 90vh;
         margin: 0 auto;
+        background: transparent;
+        z-index: 1;
+        position: relative;
       }
     </style>
 
@@ -40,9 +43,27 @@
     <script type="text/javascript" src="../lib/webgl-utils.js"></script>
     <script type="text/javascript" src="../lib/initShaders.js"></script>
     <script type="text/javascript" src="./d3.js"></script>
+
+    <button
+      id="theme-toggle"
+      style="
+        position: absolute;
+        top: 16px;
+        right: 16px;
+        padding: 6px 12px;
+        border: 1px solid var(--color-border);
+        background: var(--color-surface);
+        color: var(--color-fg);
+        border-radius: 6px;
+        cursor: pointer;
+        font-weight: 500;
+      "
+    ></button>
+    <script src="../../theme-toggle.js"></script>
   </head>
 
   <body>
+    <a href="../index.html" class="back-btn" aria-label="Back to H2">← Back</a>
     <canvas id="gl-canvas" width="512" height="512">
       Oops ... your browser doesn't support the HTML5 canvas element
     </canvas>
