--- a/src/H3/index.html
+++ b/src/H3/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="../shared.css">
 </head>
 
+<button id="theme-toggle"></button>
+<script src="../theme-toggle.js"></script>
+
+<a href="../../index.html" class="back-btn" aria-label="Back to main page">← Back</a>
 <h1>Heimadæmi 3</h1>
-<ul>
+<ul class="list-centered">
     <li><a href="./d1/d1.html">Hreyfanlegur Sierpinski</a></li>
     <li><a href="./d2/d2.html">Sínus Bolti</a></li>
 </ul>
