--- a/src/H4/index.html
+++ b/src/H4/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="../shared.css">
 </head>
 
+<button id="theme-toggle"></button>
+<script src="../theme-toggle.js"></script>
+
+<a href="../../index.html" class="back-btn" aria-label="Back to main page">← Back</a>
 <h1>Heimadæmi 4</h1>
-<ul>
+<ul class="list-centered">
     <li><a href="./billy/billy.html">BILLY</a></li>
     <li><a href="./klukka/klukka.html">Continue Time</a></li>
 </ul>
