--- a/src/H4/klukka/klukka.html
+++ b/src/H4/klukka/klukka.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="../../shared.css" />
+    <button id="theme-toggle"></button>
+    <script src="../../theme-toggle.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
@@ -58,6 +61,7 @@
   </head>
 
   <body>
+    <a href="../index.html" class="back-btn" aria-label="Back to H4">← Back</a>
     <canvas id="gl-canvas" width="512" height="512">
       Oops ... your browser doesn't support the HTML5 canvas element
     </canvas>
