--- a/src/H6/billy-phong/billy-phong.html
+++ b/src/H6/billy-phong/billy-phong.html
@@ -1,25 +1,30 @@
+
+<!DOCTYPE html>
 <html>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Billy Phong</title>
+  <link rel="stylesheet" href="../../shared.css" />
+  <button id="theme-toggle"></button>
+  <script src="../../theme-toggle.js"></script>
 
 
 <style>
     body {
       position: relative;
-
       margin: 0 auto;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       flex-wrap: nowrap;
-      background-color: rgb(255, 255, 255);
-
       min-height: 100vh;
       max-height: 100vh;
-
       overflow: hidden;
+      /* background-color removed to allow theme */
     }
     canvas {
-      width: 100vw;
       margin: 0 auto;
 
       display: flex;
@@ -116,7 +121,9 @@ void main()
 <script type="module" src="../../lib/MV.js"></script>
 <script type="module" src="billy-phong.js"></script>
 
+  </head>
 <body>
+  <a href="../index.html" class="back-btn" aria-label="Back to H6">← Back</a>
 <canvas id="gl-canvas" width="512"" height="512">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
