--- a/src/H6/index.html
+++ b/src/H6/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="../shared.css">
 </head>
 
+<button id="theme-toggle"></button>
+<script src="../theme-toggle.js"></script>
+
+<a href="../../index.html" class="back-btn" aria-label="Back to main page">← Back</a>
 <h1>Heimadæmi 6</h1>
-<ul>
+<ul class="list-centered">
     <li><a href="./billy-phong/billy-phong.html">billy-phong</a></li>
     <li><a href="./trans-te/trans-te.html">trans-te</a></li>
 </ul>
