--- a/src/H7/shadowmap.html
+++ b/src/H7/shadowmap.html
@@ -3,21 +3,47 @@
   <head>
     <meta charset="utf-8" />
     <title>Punktljósgjafi með skuggakorti</title>
-    <style>
-      body {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin: 0 auto;
-        height: 100vh;
-        overflow: hidden;
-        background-color: black;
-      }
-    </style>
+    <link rel="stylesheet" href="../shared.css" />
   </head>
   <body>
-    <canvas id="c" width="800" height="800"></canvas>
+    <a href="../../index.html" class="back-btn" aria-label="Back to H7"
+      >← Back</a
+    >
+    <button id="theme-toggle"></button>
+
+    <canvas
+      id="c"
+      width="800"
+      height="800"
+      style="z-index: 1; position: relative"
+    ></canvas>
+    <style>
+      #theme-toggle {
+        position: fixed;
+        top: 18px;
+        right: 18px;
+        z-index: 1000;
+      }
+      .dg.ac {
+        z-index: 15;
+        margin-top: 4rem;
+        padding: 1rem;
+        /* display: flex;
+        flex-direction: column; */
+      }
+      .dg .main {
+        border-radius: 8px;
+        box-shadow: var(--shadow-2, 0 4px 16px rgba(0, 0, 0, 0.08));
+        background: var(--color-surface-1, #c6bfbf);
+        color: var(--color-fg, #222);
+        border: 1px solid var(--color-border, #a6c5ed);
+        font-family: var(--font-stack, system-ui);
+      }
+      .dg .cr {
+        border-radius: 4px;
+      }
+    </style>
+
     <script type="importmap">
       {
         "imports": {
@@ -26,6 +52,8 @@
         }
       }
     </script>
+
+    <script src="../theme-toggle.js"></script>
     <script type="module" src="shadowmap.js"></script>
   </body>
 </html>
