--- a/src/V1/index.html
+++ b/src/V1/index.html
@@ -6,12 +6,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+
     <title>Shoot Stuff</title>
+    <link rel="stylesheet" href="../shared.css" />
 
     <style>
       body {
         margin: 0 auto;
-        padding: 10px 0;
+        padding: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -19,10 +21,8 @@
       }
       canvas {
         /* margin: 1rem 0; */
-        height: 100%;
-        max-height: 100vh;
+        height: 100vh;
         width: auto;
-        height: auto;
         aspect-ratio: 1 / 1;
       }
     </style>
@@ -66,9 +66,14 @@
     <script type="text/javascript" src="./lib/webgl-utils.js"></script>
     <script type="text/javascript" src="./lib/MV.js"></script>
     <script type="module" src="./game.js"></script>
+    <button id="theme-toggle"></button>
+    <script src="../theme-toggle.js"></script>
   </head>
 
   <body>
+    <a href="../../index.html" class="back-btn" aria-label="Back to main page"
+      >← Back</a
+    >
     <canvas id="gl-canvas">
       Oops ... your browser doesn't support the HTML5 canvas element
     </canvas>
